--- a/admin/a/styles/style.css
+++ b/admin/a/styles/style.css
@@ -3,7 +3,7 @@ body{
 }
 header{
     position: fixed;
-    width: calc(100% - 300px);
+    width: calc(100% - 280px);
     border-bottom: 1px solid #626469;
     z-index: 200;
     display: flex;
@@ -27,7 +27,20 @@ header{
     color: #fff;
     font-family: body-font;
     font-size: 21px;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
 }
+.header-div .text-div span p{
+font-size: 11px;
+}
+.header-div .text-div span p{
+  color: #fff;
+  font-family: body-font;
+  font-size: 19px;
+}
+
 .header-div .text-div img{
     width: 26px;
     height: 26px;
@@ -45,25 +58,37 @@ header{
     align-items: flex-start;
 }
 .header-div .text-div .text-div-i{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    /* border: 1px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
 }
 .header-div .text-div .text-div-i span{
-    font-size: 15px;
+  font-size: 15px;
 }
 .header-div .text-div .text-div-i span p{
-    margin: 0;
+  font-size: 11px;
+  color: #43eecf;
+  text-transform: uppercase;
+}
+.header-div .text-div .text-div-i span p{
+  margin: 0;
 }
 .header-div .text-div p{
-    color: #fff;
-    font-size: 13px;
+  color: #fff;
+  font-size: 13px;
+  font-family: body-font;
+}
+.header-div .text-div p small{
+  font-family: body-font;
+  font-size: 12px;
+  color: #43eecf;
 }
 .header-div span{
-    color: #fff;
-    font-size: 25px;
+  color: #fff;
+  font-size: 25px;
+  font-family: body-font;
 }
 
 #blink {
@@ -639,11 +664,13 @@ hr{
     background: #075294;
  }
  .content-div .staff-div-in{
+  width: 100%;
     margin-top: 40px;
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
     height: 300px;
+   
 }
 .staff-inner{
     width: 300px;
@@ -695,6 +722,7 @@ hr{
 }
 .staff-name .active{
     color: #08b9b9;
+    text-transform: capitalize;
 }
 .staff-name p{
     margin: 14px 0 0 0;
@@ -848,15 +876,30 @@ hr{
     border-radius: 5px;
     font-family: body-font;
   }
+  .form-div select{
+    padding: 10px 10px;
+    outline: none;
+    border: 1px solid var(--outline-input);
+    border-radius: 5px;
+    font-family: body-font;
+    cursor: pointer;
+    background: #fff;
+    text-transform: uppercase;
+  }
+  .form-div select option{
+    font-family: body-font;
+    cursor: pointer;
+  }
   .form-div input::placeholder.form-div input{
     font-family: body-font;
   }
   .form button{
-    width: 120px;
+    min-width: 120px;
     padding: 14px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
     border: none;
     cursor: pointer;
     background: #075294;
@@ -888,6 +931,7 @@ hr{
     background: linear-gradient(to right, #262a38, #365094);
     height: 45px;
     border-radius: 6px 6px 0 0;
+    overflow: hidden;
   }
 .staff-update-div{
     height: 520px;
@@ -938,7 +982,7 @@ hr{
     width: 100%;
     height:100%;
     border-radius: 7px;
-    border: 2px solid #fff;
+    border: 2px solid #1A1C23;
   }
   .profile-div .text-div label{
     font-family: body-font;
@@ -946,6 +990,7 @@ hr{
   }
   .profile-div .text-div label span{
     color: #08b9b9;
+    text-transform: uppercase;
   }
   .basic-div{
     width: 95%;
@@ -961,7 +1006,7 @@ hr{
   }
   .basic-div-in hr{
     height: 0;
-    border: 2px solid #075294;
+    border: 2px solid #393A41;
   }
   .basic-div .input-div-in{
     width: 100%;
@@ -1007,6 +1052,14 @@ hr{
     color: #525252;
     display: flex;
     background: #fff;
+    align-items: center;
+  }
+  .inner-div select{
+    width: 100%;
+    background: #fff;
+    border: none;
+    font-size: 17px;
+    cursor: pointer;
   }
   .input-inner input{
     border: none;
@@ -1048,6 +1101,13 @@ hr{
     margin: 10px 0;
     transition: 0.5s;
   }
+  
   .basic-div button:hover{
     background: #0779cf;
   }
+ .staff-add-body .form-div .complain{
+  border: #F7941C 1px solid;
+  -moz-appearance: none;
+  -moz-transform: scale(1.02) translate(1px,0px);
+  -webkit-transform: scale(1.02) translate(1px,0px);
+}
